# run-shadex

./: .gitignore  CNAME  Cargo.toml  index.html  shadex-gui.js
.github/workflows/: pages.yaml
examples/: test.shadex  test_fv.shadex  typeland.shadextypes
shadex-backend/: Cargo.toml
shadex-backend/src/: execution.rs  lib.rs  main.rs  nodegraph.rs  parsing.rs  typechecking.rs
shadex-backend/src/execution/: execution_types.rs  frag.wgsl_template  programs.rs  proof_of_concept.rs  typechecking.rs  value_reprs.rs  wgpu_back.rs
shadex-backend/src/parsing/: type_parsing.rs
shadex-backend/src/typechecking/: typetypes.rs
shadex-computation-definitions/: Cargo.toml  test.wgsl
shadex-computation-definitions/examples/: if.nodedef  wip_testing.nodedef
shadex-computation-definitions/src/: lib.rs  main.rs  nodedef.rs
shadex-computation-definitions/src/nodedef/: ast.rs  ir.rs  parsing.rs  semantic_analysis.rs
shadex-gui/: Cargo.toml
shadex-gui/examples/: gray.shadex  rgb.shadex
shadex-gui/src/: app.rs  example_programs.rs  lib.rs  main.rs
src/: execution.rs  lib.rs  main.rs  nodegraph.rs  parsing.rs
src/execution/: computation_requests.rs  typechecking.rs  value_reprs.rs
src/parsing/: type_parsing.rs
visual-shadex-lib/: Cargo.toml
visual-shadex-lib/src/: formal_graph_annotations.rs  graph_state.rs  helpers.rs  lib.rs  node_templates.rs  visual_graph.rs  vnode_infos.rs  vnode_templates.rs
visual-shadex-lib/src/visual_graph/: vnode_infos.rs
visual-shadex-lib/src/visual_graph/vnode_infos/: node_types.rs
visual-shadex-lib/src/visual_graph/vnode_infos/node_types/: add.rs  attr.rs  constant.rs  out.rs  vector3.rs
(+11 files in other folders)
