[package]
name = "shadex-gui"
version = "0.1.0"
edition = "2024"
default-run = "shadex-gui"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["persistence", "wgpu", "wayland", "x11", "accesskit", "default_fonts"] }
egui = "0.33.3"
log = "0.4.29"
nom = "8.0.0"
paste = "1.0.15"
rpds = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
shadex-backend = { version = "0.1.0", path = "../shadex-backend" }
visual-shadex-lib = { version = "0.1.0", path = "../visual-shadex-lib" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"              # to access the DOM (to hide the loading text)
